Fixing skeleton overflow issue on mobile

--- a/src/pages/Profile/Header/Header.module.css
+++ b/src/pages/Profile/Header/Header.module.css
@@ -13,6 +13,7 @@
   display: flex;
   column-gap: 10px;
   height: 40px;
+  overflow-y: auto;
 }
 
 .header__tab {
