--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     padding: 20px 24px;
     column-gap: 24px;
+    width: 100%;
 }
 
 
